リンクのパスを修正して、プライバシーポリシーと利用規約への正しいナビゲーションを提供

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
   <hr>
 
   <p>
-    <a href="/privacy/">プライバシーポリシー</a> |
-    <a href="/terms/">利用規約</a>
+    <a href="/fleamarket-scan-pages/privacy/">プライバシーポリシー</a> |
+    <a href="/fleamarket-scan-pages/terms/">利用規約</a>
   </p>
 </body>
 </html>
