HTMLファイルにコンテナを追加し、スタイルシートをリンクして整形を改善

--- a/index.html
+++ b/index.html
@@ -3,36 +3,39 @@
 <head>
   <meta charset="UTF-8">
   <title>フリマScan サポート</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>フリマScan サポートページ</h1>
+  <div class="container">
+    <h1>フリマScan サポートページ</h1>
 
-  <p>
-    フリマScanをご利用いただきありがとうございます。
-  </p>
+    <p>
+        フリマScanをご利用いただきありがとうございます。
+    </p>
 
-  <p>
-    本アプリに関するご質問、不具合のご報告、ご要望などがございましたら、<br>
-    下記のメールアドレスまでお気軽にお問い合わせください。
-  </p>
+    <p>
+        本アプリに関するご質問、不具合のご報告、ご要望などがございましたら、<br>
+        下記のメールアドレスまでお気軽にお問い合わせください。
+    </p>
 
-  <p>
-    <strong>お問い合わせ先</strong><br>
-    <a href="mailto:fleamarketscan@gmail.com">
-      fleamarketscan@gmail.com
-    </a>
-  </p>
+    <p>
+        <strong>お問い合わせ先</strong><br>
+        <a href="mailto:fleamarketscan@gmail.com">
+        fleamarketscan@gmail.com
+        </a>
+    </p>
 
-  <p>
-    ※お問い合わせ内容によっては、回答までにお時間をいただく場合がございます。<br>
-    ※土日・祝日は返信が遅れる場合がございます。あらかじめご了承ください。
-  </p>
+    <p>
+        ※お問い合わせ内容によっては、回答までにお時間をいただく場合がございます。<br>
+        ※土日・祝日は返信が遅れる場合がございます。あらかじめご了承ください。
+    </p>
 
-  <hr>
+    <hr>
 
-  <p>
-    <a href="/fleamarket-scan-pages/privacy/">プライバシーポリシー</a> |
-    <a href="/fleamarket-scan-pages/terms/">利用規約</a>
-  </p>
+    <p>
+        <a href="/fleamarket-scan-pages/privacy/">プライバシーポリシー</a> |
+        <a href="/fleamarket-scan-pages/terms/">利用規約</a>
+    </p>
+  </div>
 </body>
 </html>
