--- a/privacy/index.html
+++ b/privacy/index.html
@@ -3,44 +3,47 @@
 <head>
   <meta charset="UTF-8">
   <title>プライバシーポリシー | フリマScan</title>
+  <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-  <h1>プライバシーポリシー</h1>
+  <div class="container">
+    <h1>プライバシーポリシー</h1>
 
-  <p>
-    フリマScan（以下、「本アプリ」）は、ユーザーの個人情報を適切に取り扱うことを重要視しています。
-  </p>
+    <p>
+        フリマScan（以下、「本アプリ」）は、ユーザーの個人情報を適切に取り扱うことを重要視しています。
+    </p>
 
-  <h2>取得する情報</h2>
-  <p>
-    本アプリでは、個人を特定できる情報を収集することはありません。
-  </p>
+    <h2>取得する情報</h2>
+    <p>
+        本アプリでは、個人を特定できる情報を収集することはありません。
+    </p>
 
-  <h2>利用目的</h2>
-  <p>
-    本アプリは、書籍等のバーコード情報をもとにフリマサイトの検索を補助する目的でのみ利用されます。
-  </p>
+    <h2>利用目的</h2>
+    <p>
+        本アプリは、書籍等のバーコード情報をもとにフリマサイトの検索を補助する目的でのみ利用されます。
+    </p>
 
-  <h2>第三者提供</h2>
-  <p>
-    取得した情報を第三者に提供することはありません。
-  </p>
+    <h2>第三者提供</h2>
+    <p>
+        取得した情報を第三者に提供することはありません。
+    </p>
 
-  <h2>お問い合わせ</h2>
-  <p>
-    本ポリシーに関するお問い合わせは、下記までご連絡ください。
-  </p>
+    <h2>お問い合わせ</h2>
+    <p>
+        本ポリシーに関するお問い合わせは、下記までご連絡ください。
+    </p>
 
-  <p>
-    <a href="mailto:fleamarketscan@gmail.com">
-      fleamarketscan@gmail.com
-    </a>
-  </p>
+    <p>
+        <a href="mailto:fleamarketscan@gmail.com">
+        fleamarketscan@gmail.com
+        </a>
+    </p>
 
-  <hr>
+    <hr>
 
-  <p>
-    <a href="/fleamarket-scan-pages/">サポートページへ戻る</a>
-  </p>
+    <p>
+        <a href="/fleamarket-scan-pages/">サポートページへ戻る</a>
+    </p>
+  </div>
 </body>
 </html>
