--- a/terms/index.html
+++ b/terms/index.html
@@ -3,34 +3,37 @@
 <head>
   <meta charset="UTF-8">
   <title>利用規約 | フリマScan</title>
+  <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-  <h1>利用規約</h1>
+  <div class="container">
+    <h1>利用規約</h1>
 
-  <p>
-    本利用規約は、フリマScan（以下、「本アプリ」）の利用条件を定めるものです。
-  </p>
+    <p>
+        本利用規約は、フリマScan（以下、「本アプリ」）の利用条件を定めるものです。
+    </p>
 
-  <h2>禁止事項</h2>
-  <p>
-    ユーザーは、本アプリの利用にあたり、法令または公序良俗に反する行為を行ってはなりません。
-  </p>
+    <h2>禁止事項</h2>
+    <p>
+        ユーザーは、本アプリの利用にあたり、法令または公序良俗に反する行為を行ってはなりません。
+    </p>
 
-  <h2>免責事項</h2>
-  <p>
-    本アプリは、フリマサイト上の情報の正確性や完全性を保証するものではありません。
-    本アプリの利用により生じたいかなる損害についても、開発者は責任を負いません。
-  </p>
+    <h2>免責事項</h2>
+    <p>
+        本アプリは、フリマサイト上の情報の正確性や完全性を保証するものではありません。
+        本アプリの利用により生じたいかなる損害についても、開発者は責任を負いません。
+    </p>
 
-  <h2>規約の変更</h2>
-  <p>
-    本規約の内容は、必要に応じて変更されることがあります。
-  </p>
+    <h2>規約の変更</h2>
+    <p>
+        本規約の内容は、必要に応じて変更されることがあります。
+    </p>
 
-  <hr>
+    <hr>
 
-  <p>
-    <a href="/fleamarket-scan-pages/">サポートページへ戻る</a>
-  </p>
+    <p>
+        <a href="/fleamarket-scan-pages/">サポートページへ戻る</a>
+    </p>
+  </div>
 </body>
 </html>
