フッターのHTML構造を改善し、スタイルを適用してリンクの表示を整形

--- a/index.html
+++ b/index.html
@@ -10,32 +10,31 @@
     <h1>フリマScan サポートページ</h1>
 
     <p>
-        フリマScanをご利用いただきありがとうございます。
+      フリマScanをご利用いただきありがとうございます。
     </p>
 
     <p>
-        本アプリに関するご質問、不具合のご報告、ご要望などがございましたら、<br>
-        下記のメールアドレスまでお気軽にお問い合わせください。
+      本アプリに関するご質問、不具合のご報告、ご要望などがございましたら、<br>
+      下記のメールアドレスまでお気軽にお問い合わせください。
     </p>
 
     <p>
-        <strong>お問い合わせ先</strong><br>
-        <a href="mailto:fleamarketscan@gmail.com">
+      <strong>お問い合わせ先</strong><br>
+      <a href="mailto:fleamarketscan@gmail.com">
         fleamarketscan@gmail.com
-        </a>
+      </a>
     </p>
 
     <p>
-        ※お問い合わせ内容によっては、回答までにお時間をいただく場合がございます。<br>
-        ※土日・祝日は返信が遅れる場合がございます。あらかじめご了承ください。
+      ※お問い合わせ内容によっては、回答までにお時間をいただく場合がございます。<br>
+      ※土日・祝日は返信が遅れる場合がございます。あらかじめご了承ください。
     </p>
 
-    <hr>
-
-    <p>
-        <a href="/fleamarket-scan-pages/privacy/">プライバシーポリシー</a> |
-        <a href="/fleamarket-scan-pages/terms/">利用規約</a>
-    </p>
+    <!-- フッター -->
+    <div class="footer">
+      <a href="/fleamarket-scan-pages/privacy/">プライバシーポリシー</a>
+      <a href="/fleamarket-scan-pages/terms/">利用規約</a>
+    </div>
   </div>
 </body>
 </html>
