--- a/privacy/index.html
+++ b/privacy/index.html
@@ -39,11 +39,9 @@
         </a>
     </p>
 
-    <hr>
-
-    <p>
+    <div class="footer">
         <a href="/fleamarket-scan-pages/">サポートページへ戻る</a>
-    </p>
+    </div>
   </div>
 </body>
 </html>
