--- a/terms/index.html
+++ b/terms/index.html
@@ -29,11 +29,9 @@
         本規約の内容は、必要に応じて変更されることがあります。
     </p>
 
-    <hr>
-
-    <p>
+    <div class="footer">
         <a href="/fleamarket-scan-pages/">サポートページへ戻る</a>
-    </p>
+    </div>
   </div>
 </body>
 </html>
