利用規約にAppleの標準ライセンス契約に関する情報を追加

--- a/terms/index.html
+++ b/terms/index.html
@@ -13,6 +13,9 @@
     <p>
         本利用規約は、フリマScan（以下、「本アプリ」）の利用条件を定めるものです。
     </p>
+    <p>
+        本アプリの利用には、本規約に加えて、Appleが定める標準のライセンス契約（Standard Apple-customized End User License Agreement）が適用されます。
+    </p>
 
     <h2>禁止事項</h2>
     <p>
