利用規約にAppleの標準ライセンス契約へのリンクを追加

--- a/terms/index.html
+++ b/terms/index.html
@@ -14,7 +14,8 @@
         本利用規約は、フリマScan（以下、「本アプリ」）の利用条件を定めるものです。
     </p>
     <p>
-        本アプリの利用には、本規約に加えて、Appleが定める標準のライセンス契約（Standard Apple-customized End User License Agreement）が適用されます。
+        本アプリの利用には、本規約に加えて、Appleが定める標準のライセンス契約（下記）が適用されます。<br>
+        <a href="https://www.apple.com/legal/internet-services/itunes/dev/stdeula/">LICENSED APPLICATION END USER LICENSE AGREEMENT</a>
     </p>
 
     <h2>禁止事項</h2>
