利用規約のリンクにtarget属性とrel属性を追加し、免責事項をリスト形式に変更

--- a/terms/index.html
+++ b/terms/index.html
@@ -15,7 +15,7 @@
     </p>
     <p>
         本アプリの利用には、本規約に加えて、Appleが定める標準のライセンス契約（下記）が適用されます。<br>
-        <a href="https://www.apple.com/legal/internet-services/itunes/dev/stdeula/">LICENSED APPLICATION END USER LICENSE AGREEMENT</a>
+        <a href="https://www.apple.com/legal/internet-services/itunes/dev/stdeula/" target="_blank" rel="noopener noreferrer">LICENSED APPLICATION END USER LICENSE AGREEMENT</a>
     </p>
 
     <h2>禁止事項</h2>
@@ -24,10 +24,12 @@
     </p>
 
     <h2>免責事項</h2>
-    <p>
-        本アプリは、フリマサイト上の情報の正確性や完全性を保証するものではありません。
-        本アプリの利用により生じたいかなる損害についても、開発者は責任を負いません。
-    </p>
+    <ul>
+        <li>本アプリは、書籍情報の取得にGoogle Books APIおよびopenBDを利用しています。取得された情報の正確性、完全性、最新性を保証するものではありません。</li>
+        <li>本アプリは、市場相場の参照先としてメルカリ、Keepa等の外部サイトへのリンクやWebView表示を提供していますが、本アプリはこれらのサービス運営元とは一切関係がありません。</li>
+        <li>外部サイトの利用規約やプライバシーポリシーについては、各サイトの定めに従ってください。</li>
+        <li>本アプリの利用（スキャン結果の誤りや外部サイトでの取引等）により生じたいかなる損害についても、開発者は一切の責任を負いません。</li>
+    </ul>
 
     <h2>規約の変更</h2>
     <p>
